# wiktionary-entries

./: .gitignore  Cargo.toml  build.rs  download.sh
src/: lib.rs  main.rs
